feat: add actions to todo items

--- a/todo-app/src/app/home/home.component.html
+++ b/todo-app/src/app/home/home.component.html
@@ -1,12 +1,4 @@
 <app-header
-  [showBackButton]="false"
-  [currentTitle]="'Test BLABLA'">
+  [currentTitle]="header">
 </app-header>
 <app-todo-list></app-todo-list>
-
-<!-- FAB Fixed -->
-<button mat-fab class="fab-bottom-right" routerLink="/create">
-   <mat-icon>
-       <i class="material-icons md-48">add</i>
-   </mat-icon>
-</button>
