--- a/todo-app/src/app/header/header.component.less
+++ b/todo-app/src/app/header/header.component.less
@@ -9,8 +9,15 @@
   flex-wrap: wrap;
   align-items: center;
   padding: 12px 16px;
+
+  display: flex;
+  justify-content: space-between;
 }
-.button {
-  color: white;
-  margin: 0px 10px;
+
+.button-new {
+  background-color: wheat;
+}
+
+.header {
+  display: flex;
 }
