--- a/todo-app/src/app/todo-list/todo-list.component.html
+++ b/todo-app/src/app/todo-list/todo-list.component.html
@@ -6,7 +6,8 @@
       [last]="last"
       (down)="clickDown($event)"
       (up)="clickUp($event)"
-      (finish)="clickFinished($event)">
+      (finish)="clickFinished($event)"
+      (updated)="updateItem($event)">
     </app-todo-list-item>
   </div>
 </div>
