--- a/todo-app/src/app/todo-list/todo-list-item/todo-list-item.component.less
+++ b/todo-app/src/app/todo-list/todo-list-item/todo-list-item.component.less
@@ -1,3 +1,15 @@
 .card {
   margin: 0 10px 5px;
+
+  .card-subtitle {
+    margin-bottom: 0;
+  }
+
+  .form-actions-edited {
+    padding-top: 0;
+  }
+
+  .form-field {
+    width: 100%;
+  }
 }
